--- a/css/index_style.css
+++ b/css/index_style.css
@@ -99,22 +99,30 @@ h3{
 .top_banner img{
     display: block;
     width: 100%;
-    height: 650px;
-    opacity: 0.9;
 }
 
 .top_banner .center_logo{
-    display: block;
     width: 300px;
     height: 300px;
-    opacity: 1;
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     margin: auto;
+    animation: fadeInAnimation linear 3s; 
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
 }
+
+@keyframes fadeInAnimation { 
+    0% { 
+        opacity: 0; 
+    } 
+    100% { 
+        opacity: 1; 
+    } 
+} 
 
 /* --------------- About Us ----------------*/
 .index_about{
@@ -313,6 +321,10 @@ h3{
 }
 
 /* ---------------- footer -----------------*/
+.footer{
+    min-width: 100%;
+}
+
 .footer_inner{
     display: flex;
     margin-bottom: 10px;
