update pic link

--- a/css/store_style.css
+++ b/css/store_style.css
@@ -142,47 +142,47 @@ h3{
 }
 
 .s1{
-    background-image: url(../Store/資產\ 1-100.jpg);
+    background-image: url(../Store/1-100.jpg);
     flex-grow: 1;
 }
 
 .s2{
-    background-image: url(../Store/資產\ 9-100.jpg);
+    background-image: url(../Store/9-100.jpg);
     flex-grow: 1;
 }
 
 .s3{
-    background-image: url(../Store/資產\ 16-100.jpg);
+    background-image: url(../Store/16-100.jpg);
     flex-grow: 1;
 }
 
 .s4{
-    background-image: url(../Store/資產\ 2-100.jpg);
+    background-image: url(../Store/2-100.jpg);
     flex-grow: 1;
 }
 
 .s5{
-    background-image: url(../Store/資產\ 7-100.jpg);
+    background-image: url(../Store/7-100.jpg);
     flex-grow: 1;
 }
 
 .s6{
-    background-image: url(../Store/資產\ 10-100.jpg);
+    background-image: url(../Store/10-100.jpg);
     flex-grow: 1;
 }
 
 .s7{
-    background-image: url(../Store/1x/資產\ 17-100.jpg);
+    background-image: url(../Store/17-100.jpg);
     flex-grow: 1;
 }
 
 .s8{
-    background-image: url(../Store/1x/資產\ 28-100.jpg);
+    background-image: url(../Store/28-100.jpg);
     flex-grow: 1;
 }
 
 .s9{
-    background-image: url(../Store/1x/資產\ 32-100.jpg);
+    background-image: url(../Store/32-100.jpg);
     flex-grow: 1;
 }
 
