update go to top btn

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -344,7 +344,7 @@ h3{
     margin-left: 10px;
 }
 
-/* ---------------- fo to top btn -----------------*/
+/* ---------------- go to top btn -----------------*/
 #topBtn {
     position: fixed; 
     bottom: 5px; 
