--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -98,17 +98,19 @@ h3{
 
 /* --------------- 喝酒不開車 ----------------*/
 .warning{
+    background-image: url(../index/warning1200.svg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     position: sticky;
     bottom: 0;
-    display: flex;
-    align-items: center;
-    max-width: 100%;
     height: 60px;
 }
 
 /* ---------------- footer -----------------*/
 .footer{
-    min-width: 100%;
+    width: 100%;
+    margin-bottom: 60px;
 }
 
 .footer_inner{
