--- a/css/index_style.css
+++ b/css/index_style.css
@@ -83,6 +83,7 @@
 }
 
 .index_product_list{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: baseline;
@@ -125,13 +126,11 @@
     background-image: url(../index/index_bar_pic1.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 120px;
-    margin-right: 120px;
-    margin-top: 65px;
-    padding-top: 65px;
-    padding-bottom: 65px;
-    padding-left: 60px;
-    align-items: center;
+    height: 400px;
+    margin: 65px 120px 0 120px;
+    padding: 65px 0 65px 60px;
+
+    position: relative;
 }
 
 .index_bar_text {
@@ -143,6 +142,10 @@
     display: flex;
     flex-direction: column;
     padding: 0 20px 20px;
+
+    position: absolute;
+    left: 50px;
+    top: 50px;
 }
 
 .index_bar_text p{
@@ -171,12 +174,10 @@
     background-image: url(../index/index_store_pic.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 120px;
-    margin-right: 120px;
-    margin-top: 65px;
-    padding-top: 65px;
-    padding-bottom: 65px;
-    padding-left: 60px;
+    height: 400px;
+    margin: 65px 120px 20px;
+    padding: 65px 60px 65px 0;
+
     position: relative;
     text-align: center;
 }
@@ -190,13 +191,9 @@
     display: flex;
     flex-direction: column;
 
-    position: relative;
-    left: 700px;
-    top: 10px;
-}
-
-.index_store_text p{
-    margin-left: 20px;
+    position: absolute;
+    right: 100px;;
+    top: 50px;
 }
 
 .index_store_text a{
