--- a/css/about_style.css
+++ b/css/about_style.css
@@ -55,6 +55,7 @@
     padding: 30px;
     display: flex;
     justify-content: space-between;
+    text-align: center;
 }
 
 .intro_mid .intro_mid_pic2 img{
@@ -66,9 +67,7 @@
 
 .intro_mid .intro_mid_text p{
     width: 400px;
-    text-align: left;
-    padding: 30px 30px 30px 0;
-    margin-top: 30px;
+    margin-top: 120px;
 }
 
 .intro_mid .intro_mid_pic img{
