--- a/css/contact.css
+++ b/css/contact.css
@@ -1,22 +1,23 @@
 /* ------------------ top_banner -------------------*/
 .top_banner{
-    width: 100%;
-    position: relative;
-}
-
-.top_banner img{
+    background-image: url(../Contact/contact_banner.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
     width: 100%;
     height: calc(100vh - 140px);
+
+    position: relative;
 }
 
 .top_banner h2{
     text-align: center;
-    position:  absolute;
-    top: 250px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* ------------------ intro -------------------*/
