update recommand margin

--- a/css/product_style.css
+++ b/css/product_style.css
@@ -194,6 +194,7 @@
 /* ------------------ 推薦喝法 -------------------*/
 .recommand{
     text-align: center;
+    margin-top: 30px;
 }
 
 .recommandInner{
