update banner size

--- a/css/about_style.css
+++ b/css/about_style.css
@@ -1,6 +1,6 @@
 /* ------------------ top_banner -------------------*/
 .top_banner{
-    background-image: url(../About/about_banner.jpg);
+    background-image: url(../About/about_banner_new2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
