--- a/css/bar_style.css
+++ b/css/bar_style.css
@@ -1,6 +1,6 @@
 /* ------------------ top_banner -------------------*/
 .top_banner{
-    background-image: url(../Bar/umebar_banner.jpg);
+    background-image: url(../Bar/umebar_banner_new.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
