--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 /* ------------------ top_banner -------------------*/
 .top_banner{
-    background-image: url(../Contact/contact_banner.jpg);
+    background-image: url(../Contact/contact_banner_new.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
