--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,6 +1,6 @@
 /* ------------------ top banner -------------------*/
 .top_banner{
-    background-image: url(../index/index_banner.jpg);
+    background-image: url(../index/index_banner_new.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -71,6 +71,7 @@
     line-height: 40px;
     margin-left: 20px;
     margin-top: 20px;
+    border-radius: 5px;
 }
 
 .index_about_text a:hover{
@@ -91,17 +92,19 @@
     text-align: center;
 }
 
-.index_product_list li{
-    position: relative;
-}
-
 .index_product_list li img{
     border: 0;
     margin: 30px;
-    padding-bottom: 30px;
+    overflow: hidden;
+    transform:scale(1);
+    transition: all 1s ease-out;
 }
 
-.index_product_list li a{
+.index_product_list li p{
+    margin-bottom: 30px;
+}
+
+.productbtn{
     display: block;
     height: 40px;
     width: 150px;
@@ -109,16 +112,16 @@
     color: whitesmoke;
     text-align: center;
     line-height: 40px;
-
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin: 0 auto;
+    border-radius: 5px;
 }
 
 .index_product_list a:hover{
     background-color:#BF5B04;
+}
+
+.index_product_list img:hover {
+    transform:scale(1.1);
 }
 
 /* --------------- UME BAR ----------------*/
@@ -163,6 +166,7 @@
     line-height: 40px;
     margin-top: 20px;
     margin-left: 20px;
+    border-radius: 5px;
 }
 
 .index_bar_text a:hover{
@@ -208,6 +212,7 @@
     margin-top: 20px;
     margin-left: 20px;
     align-self: center;
+    border-radius: 5px;
 }   
 
 .index_store_text a:hover{
