--- a/css/product_style.css
+++ b/css/product_style.css
@@ -53,6 +53,7 @@
 
 .productTitle{
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .productList ul li a{
@@ -67,7 +68,7 @@
     width: 82px; 
 }
 
-.productList ul li a::after{
+/* .productList ul li a::after{
     background: url(../Product/godown.svg) no-repeat center top;
     width: 35px;
     height: 18px;
@@ -77,7 +78,7 @@
     display: block;
     content: '';
     margin-left: -17px;
-}
+} */
 
 /* ------------------ product list -------------------*/
 
@@ -97,10 +98,6 @@
     text-align: right;
     margin-top: 30px;
 }
-
-/* .item .itemInnerPic img{
-    width: 65%;
-} */
 
 .item .itemInnerText{
     float: right;
