--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -23,13 +23,13 @@ a{
 }
 
 h2{
-    font-size: 3.5em;
+    font-size: 3.5rem;
     font-weight: bold;
     letter-spacing: 10px;
 }
 
 h3{
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: bold;
     padding: 20px;
     color: #A6C609;
