--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -4,6 +4,10 @@
     box-sizing: border-box; 
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 #wrapper{
     max-width: 1200x;
     margin: 0 auto;
@@ -147,7 +151,9 @@ h3{
     right: 40px; 
     z-index: 99; 
     border: none; 
-    outline: none; 
+    outline: none;
+    
+    display: none;
   }
   
   #topBtn i{
