--- a/css/nav_footer.css
+++ b/css/nav_footer.css
@@ -121,7 +121,7 @@ h3{
 /* ---------------- footer -----------------*/
 .footer{
     width: 100%;
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
 }
 
 .footer_inner{
