--- a/css/newNavandFooter.css
+++ b/css/newNavandFooter.css
@@ -40,6 +40,12 @@ h3{
     letter-spacing: 5px;
 }
 
+@media screen and (max-width: 991px){
+    img{
+        max-width: 100%;
+        height: auto;
+    }
+}
 /* ------------------ nav bar -------------------*/
 .header {
     height: 80px;
@@ -136,6 +142,7 @@ ul.menu{
         display: block;
         color: #1C1C1C;
         text-decoration: none;
+        margin-right: 20px;
     }
 }
 
@@ -152,7 +159,8 @@ ul.menu{
 
 @media screen and (max-width: 991px){
     .warning{
-        width: 100%;
+        max-width: 100%;
+        margin: 0 auto;
     }
 }
 
