--- a/css/about_style.css
+++ b/css/about_style.css
@@ -9,7 +9,6 @@
     height: calc(100vh - 140px);
 
     position: relative;
-    /* width: 100%; */
 }
 
 
@@ -22,30 +21,53 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
 
+@media screen and (max-width: 991px){
+    .top_banner{
+        width: 100%;
+        top: 80px;
+        display: block;
+    }
+
+    .top_banner h2{
+        margin: 0 auto;
+        font-size: 3rem;
+    }
 }
 
 /* ------------------ intro -------------------*/
 .intro h3{
     text-align: center;
-    margin: 20px 0 20px 0;
+    margin: 20px auto 0;
+}
+
+@media screen and (max-width: 991px){
+    .intro{
+        display: block;
+        margin-top: 100px;
+    }
+
+    .intro h3{
+        font-size: 1.5rem;
+        text-align: center;
+    }
 }
 
 /* ------------------ intro top -------------------*/
-
 .intro_top{
     display: flex;
     justify-content: center;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
 }
 
 .intro_top .intro_top_pic img{
     width: 300px;
-    margin-right: 50px;
+    margin: 50px;
 }
 
 .intro_top_text{
-    margin-top: 40px;
+    
 }
 
 .intro_top .intro_top_text p{
@@ -54,35 +76,81 @@
     border-radius: 3px;
     text-align: left;
     padding: 30px;
+
+}
+
+@media screen and (max-width: 991px){
+.intro_top{
+    display: block;
+}
+
+.intro_top .intro_top_pic img{
+    max-width: 350px;
+    margin: 0 auto;
+    vertical-align: middle;
+}
+
+.intro_top_pic{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.intro_top_pic img{
+    max-width: 100%;
+    align-self: center;
+}
+
+.intro_top_text{
+    width: 100%;
+    
+}
+
 }
 
 /* ------------------ intro middle -------------------*/
 .intro_mid{
     width: 100%;
-    margin: 20px;
-    padding: 30px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
 }
 
-.intro_mid .intro_mid_pic2 img{
+/* .intro_mid .intro_mid_pic2 img{
     width: 50%;
     border-right: 2px dashed#A6C609;
     padding-right: 30px;
     margin-left: 205px;
-}
+} */
 
 .intro_mid .intro_mid_text p{
-    width: 400px;
-    margin-top: 120px;
+    /* width: 400px;
+    margin-top: 120px; */
+
+    width: 450px;
+    border: 2px solid #A6C609;
+    border-radius: 3px;
+    text-align: center;
+    padding: 30px;
+    margin: 50px;
 }
 
 .intro_mid .intro_mid_pic img{
-    width: 50%;
-    border-left: 2px dashed#A6C609;
-    padding-left: 30px;
-    margin-right: 200px;
+    /* width: 50%; */
+    /* border-left: 2px dashed#A6C609; */
+    /* padding-left: 30px; */
+    /* margin-right: 200px; */
+    /* max-width: 350px;
+    margin: 0 auto; */
+    max-width: 300px;
+    
+}
+
+@media screen and (max-width: 991px){
+    .intro_mid{
+        display: inline-block;
+    }
+
+
 }
 
 /* ------------------ intro bottom-------------------*/
@@ -106,6 +174,12 @@
     width: 400px;
 }
 
+@media screen and (max-width: 991px){
+    .intro_bottom{
+        display: inline-block;
+    }
+}
+
 /* --------------- intro end ----------------*/
 .intro_end{
     position: relative;
@@ -114,13 +188,42 @@
 .intro_end .intro_end_text h3{
     text-align: center;
     position: absolute;
-    top: 40px;
+    top: 30px;
     left: 0;
     right: 0;
-    margin: 20px 0 20px 0;
+    color: #1c1c1c;
 }
 
 .intro_end img{
     display: block;
     width: 100%;
+}
+
+@media screen and (max-width: 991px){
+    .intro_end{
+        position: relative;
+    }
+
+    .intro_end_text{
+
+    }
+
+    .intro_end_text h3{
+        font-size: 1.5rem;
+        text-align: center;
+        position: absolute;
+               
+    }
+
+    .intro_end_pic{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 991px){
+
+    .intro_end{
+        position: relative;
+    }
+    .intro_end_text h3
 }
