--- a/css/index_style.css
+++ b/css/index_style.css
@@ -33,6 +33,11 @@
 } 
 
 @media screen and (max-width: 991px){
+    .top_banner{
+        top: 80px;
+        width: 100%;
+    }
+
     .top_banner .center_logo{
         width: 200px;
         top: 60%;
@@ -89,6 +94,7 @@
     .index_about{
         display: block;
         width: 100%;
+        margin-top: 100px;
     }
 
     .index_about_text{
