--- a/css/about_style.css
+++ b/css/about_style.css
@@ -36,7 +36,7 @@
     }
 }
 
-/* ------------------ intro -------------------*/
+/* ------------------ intro top -------------------*/
 .intro h3{
     text-align: center;
     margin: 20px auto 0;
@@ -54,176 +54,142 @@
     }
 }
 
-/* ------------------ intro top -------------------*/
-.intro_top{
-    display: flex;
-    justify-content: center;
-    padding: 30px 30px 0 30px;
-}
-
-.intro_top .intro_top_pic img{
-    width: 300px;
-    margin: 50px;
-}
-
 .intro_top_text{
-    
-}
-
-.intro_top .intro_top_text p{
-    width: 450px;
-    border: 2px solid #A6C609;
-    border-radius: 3px;
-    text-align: left;
-    padding: 30px;
-
-}
-
-@media screen and (max-width: 991px){
-.intro_top{
-    display: block;
-}
-
-.intro_top .intro_top_pic img{
-    max-width: 350px;
-    margin: 0 auto;
-    vertical-align: middle;
-}
-
-.intro_top_pic{
+    text-align: center;
+    padding: 20px;
     width: 100%;
     margin: 0 auto;
-}
-
-.intro_top_pic img{
-    max-width: 100%;
-    align-self: center;
-}
-
-.intro_top_text{
-    width: 100%;
-    
-}
-
-}
-
-/* ------------------ intro middle -------------------*/
-.intro_mid{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-/* .intro_mid .intro_mid_pic2 img{
-    width: 50%;
-    border-right: 2px dashed#A6C609;
-    padding-right: 30px;
-    margin-left: 205px;
-} */
-
-.intro_mid .intro_mid_text p{
-    /* width: 400px;
-    margin-top: 120px; */
-
-    width: 450px;
-    border: 2px solid #A6C609;
-    border-radius: 3px;
-    text-align: center;
-    padding: 30px;
-    margin: 50px;
-}
-
-.intro_mid .intro_mid_pic img{
-    /* width: 50%; */
-    /* border-left: 2px dashed#A6C609; */
-    /* padding-left: 30px; */
-    /* margin-right: 200px; */
-    /* max-width: 350px;
-    margin: 0 auto; */
-    max-width: 300px;
-    
+    border-top: 1px dashed #A6C609;
 }
 
 @media screen and (max-width: 991px){
-    .intro_mid{
-        display: inline-block;
-    }
-
-
-}
-
-/* ------------------ intro bottom-------------------*/
-.intro_bottom{
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-}
-
-.intro_bottom .intro_bottom_text p{
-    width: 400px;
-    border: 2px solid #A6C609;
-    border-radius: 3px;
-    text-align: left;
-    padding: 30px;
-    margin-right: 50px;
-    margin-top: 30px;
-}
-
-.intro_bottom .intro_bottom_pic img{
-    width: 400px;
-}
-
-@media screen and (max-width: 991px){
-    .intro_bottom{
-        display: inline-block;
-    }
-}
-
-/* --------------- intro end ----------------*/
-.intro_end{
-    position: relative;
-}
-
-.intro_end .intro_end_text h3{
-    text-align: center;
-    position: absolute;
-    top: 30px;
-    left: 0;
-    right: 0;
-    color: #1c1c1c;
-}
-
-.intro_end img{
-    display: block;
-    width: 100%;
-}
-
-@media screen and (max-width: 991px){
-    .intro_end{
-        position: relative;
-    }
-
-    .intro_end_text{
-
-    }
-
-    .intro_end_text h3{
-        font-size: 1.5rem;
-        text-align: center;
-        position: absolute;
-               
-    }
-
-    .intro_end_pic{
+    .intro_top_text{
         width: 100%;
     }
 }
 
-@media screen and (max-width: 991px){
+/* -------------- intro middle 圖片 ---------------*/
+.container_all{
+    width: fit-content;
+    margin: 10px;
+  }
 
-    .intro_end{
-        position: relative;
-    }
-    .intro_end_text h3
+.container{
+    width: calc(25% - 6px);
+    overflow:hidden;
+    height: fit-content;
+    margin:3px;
+    padding: 0;
+    display:block;
+    position:relative;
+    float:left;
+  }
+
+.container img{
+    /* width: 100%; */
+    transition-duration: .3s;
+    max-width: 100%;
+    display:block;
+    overflow:hidden;
+    margin: 0 auto;
+  }
+
+.container_text{
+    outline: 1px solid red;
+    display: block;
+    /* height: 30px; */
+    text-align: center;
+    margin: 20px auto 20px;
 }
+
+.title{
+    position:absolute;
+    display:block;
+    top: 20%;
+    left: 30%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    color: whitesmoke;
+    font-size: 3.5em;
+    text-shadow: 1px 5px 10px black;
+  }
+
+@media screen and (max-width: 991px) {
+    .container {
+        width: calc(50% - 6px);
+        padding: 10px;
+    }
+
+@media screen and (max-width: 400px) {
+    .container {
+        width: 100%;
+    }
+}
+
+/* ------------------ intro end-------------------*/
+.container_all2{
+    width: fit-content;
+    margin: 10px;
+  }
+
+.container2{
+    width: calc(25% - 6px);
+    overflow:hidden;
+    height: fit-content;
+    margin:3px;
+    padding: 0;
+    display:block;
+    position:relative;
+    /* float:left; */
+  }
+
+.container2 img{
+    transition-duration: .3s;
+    max-width: 100%;
+    display:block;
+    overflow:hidden;
+    margin: 0 auto;
+  }
+
+  @media screen and (max-width: 991px) {
+    .container2 {
+        width: calc(50% - 6px);
+        padding: 10px;
+    }
+
+@media screen and (max-width: 400px) {
+    .container2 {
+        width: 100%;
+    }
+}
+
+
+/* --------------- bottom banner ----------------*/
+.intro_end{
+    position: relative;
+}
+
+h3.endtext{
+    color: #1c1c1c;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.intro_end_pic{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.intro_end_pic img{
+    width: 100%;
+}
+
+
+
+
+
+
