--- a/css/test.css
+++ b/css/test.css
@@ -1,136 +1,121 @@
 @import url(./reset.css);
 
-*{
-    box-sizing: border-box; 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-html{
-    scroll-behavior: smooth;
+html {
+    font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
 }
 
-body {
-    font-family: 'Noto Serif TC', 'Noto Serif', serif;
-    font-size: 16px;
-    color: #1C1C1C;
-    line-height: 1.2;
-    letter-spacing: 0.1em;
-  }
-
-#wrap {
-    max-width: 100%;
-    margin: 0 auto;
-  }
-
-a{
-    color: #1C1C1C;;
-    text-decoration: none;
-}
-
-li{
+li {
     list-style: none;
 }
 
-h2{
-    font-size: 3.5rem;
-    font-weight: bold;
-    letter-spacing: 10px;
+a {
+    text-decoration: none;
 }
 
-h3{
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 20px;
-    color: #A6C609;
-    letter-spacing: 5px;
+.header{
+    border-bottom: 1px solid #E2E8F0;
 }
 
-@media screen and (max-width: 991px){
-    *{  
-    overflow:hidden;  
-    }
+.logo{
+    display: block;
+    width: 70px;
+    margin: 5px 100px 0 0;
 }
 
-/*  */
-*{  
-    margin:0;
-    box-sizing: border-box;  
-   }  
- 
-   /*Properties for Nav-bar*/  
-.navbar{  
-    display:flex;  
-    top:0;  
-    height:80px;  
-    justify-content:center;  
-    align-items:center;   
-    padding:0px 20px;   
-   }  
-
-.nav-sub{  
-    display:flex;  
-    justify-content:space-around; 
-    text-align: center;
-   }  
-
-.list-item {  
-    padding: 30px;   
-   }  
- 
-.nav_icon{
+.navbar {
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    padding: 1rem 1.5rem;
 }
-   /*Properties for Hamburger*/  
-   .ham{  
-    display:none;  
-    padding:5px;  
-    cursor:pointer;  
-   } 
 
-   .bar1,.bar2,.bar3{  
-    display:block;  
-    width:35px;  
-    height:3px;  
-    margin:5px auto;  
-    background-color: #1c1c1c;;  
-    transition: .3s;  
-   } 
+.hamburger {
+    display: none;
+}
 
-   @media only screen and (max-width:991px){  
-   *{  
-     overflow:hidden;  
-    }  
-    
-   .nav-sub{  
-     position:absolute;   
-     top:10vh;  
-     right:0px;  
-     flex-direction:column;  
-     background-color:rgb(0,0,0,0.75);  
-     border-radius:0px 0px 0px 20px;  
-     transition:transform 0.3s ease-in;  
-     transform:translate(100%);  
-     width:100%;
-    }  
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #101010;
+}
 
-   .nav-change{  
-     transform:translate(0%);  
-    }  
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
 
-   .ham{  
-     display:block;  
+.nav-item {
+    margin-left: 5rem;
+}
+
+.nav-link{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #475569;
+}
+
+.nav-link:hover{
+    color: #482ff7;
+}
+
+.nav-logo {
+    font-size: 2.1rem;
+    font-weight: 500;
+    color: #482ff7;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
     }
 
-   .change .bar1 {  
-    transform: rotate(45deg) translate(8px,3px);  
-   }
-     
-   .change .bar2 {  
-    opacity: 0;  
-   }  
+    .nav-menu.active {
+        left: 0;
+    }
 
-   .change .bar3 {  
-    transform: rotate(-45deg) translate(8px,-3px);  
-   }
+    .nav-item {
+        margin: 2.5rem 0;
+    }
 
-   }
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        -webkit-transform: translateY(8px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        -webkit-transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
+    }
+}
