--- a/css/about_style.css
+++ b/css/about_style.css
@@ -70,24 +70,22 @@
 
 /* -------------- intro middle 圖片 ---------------*/
 .container_all{
-    width: fit-content;
-    margin: 10px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
   }
 
 .container{
-    width: calc(25% - 6px);
+    width: 20%;
     overflow:hidden;
-    height: fit-content;
     margin:3px;
     padding: 0;
-    display:block;
+    display: inline-block;
     position:relative;
-    float:left;
+    justify-content: center;
   }
 
 .container img{
-    /* width: 100%; */
-    transition-duration: .3s;
     max-width: 100%;
     display:block;
     overflow:hidden;
@@ -95,18 +93,16 @@
   }
 
 .container_text{
-    outline: 1px solid red;
     display: block;
-    /* height: 30px; */
     text-align: center;
-    margin: 20px auto 20px;
+    margin: 30px;
 }
 
 .title{
     position:absolute;
     display:block;
     top: 20%;
-    left: 30%;
+    left: 35%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
     font-weight: bold;
@@ -117,7 +113,7 @@
 
 @media screen and (max-width: 991px) {
     .container {
-        width: calc(50% - 6px);
+        width: calc(50% - 10px);
         padding: 10px;
     }
 
@@ -127,51 +123,22 @@
     }
 }
 
-/* ------------------ intro end-------------------*/
-.container_all2{
-    width: fit-content;
-    margin: 10px;
-  }
-
-.container2{
-    width: calc(25% - 6px);
-    overflow:hidden;
-    height: fit-content;
-    margin:3px;
-    padding: 0;
-    display:block;
-    position:relative;
-    /* float:left; */
-  }
-
-.container2 img{
-    transition-duration: .3s;
-    max-width: 100%;
-    display:block;
-    overflow:hidden;
-    margin: 0 auto;
-  }
-
-  @media screen and (max-width: 991px) {
-    .container2 {
-        width: calc(50% - 6px);
-        padding: 10px;
-    }
-
-@media screen and (max-width: 400px) {
-    .container2 {
-        width: 100%;
-    }
-}
-
-
 /* --------------- bottom banner ----------------*/
-.intro_end{
+.endBanner{
+    background-image: url(/About/intro_end.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+    overflow: hidden;
+
     position: relative;
+    text-align: center;
 }
 
-h3.endtext{
-    color: #1c1c1c;
+.endBanner h3{
+    text-align: center;
+
     position: absolute;
     top: 10px;
     left: 0;
@@ -179,14 +146,11 @@ h3.endtext{
     margin: 0 auto;
 }
 
-.intro_end_pic{
+.endBanner img{
     width: 100%;
     margin: 0 auto;
 }
 
-.intro_end_pic img{
-    width: 100%;
-}
 
 
 
