--- a/css/about_style.css
+++ b/css/about_style.css
@@ -138,15 +138,14 @@
 
 .endBanner h3{
     text-align: center;
-
     position: absolute;
-    top: 10px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
 }
 
 .endBanner img{
-    width: 100%;
+    max-width: 100%;
     margin: 0 auto;
 }
