--- a/css/newNavandFooter.css
+++ b/css/newNavandFooter.css
@@ -225,3 +225,13 @@ ul.menu{
     color: #D98E04;
   }
 
+@media screen and (max-width: 767.98px){
+    #topBtn{
+        position: fixed; 
+        bottom: 50px; 
+        right: 30px;
+    }
+    #topBtn i{
+        font-size: 32px;
+    }
+}
