--- a/css/about_style.css
+++ b/css/about_style.css
@@ -69,22 +69,6 @@
 }
 
 /* -------------- intro middle 圖片 ---------------*/
-.container_all{
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-.container{
-    width: 20%;
-    overflow:hidden;
-    margin:3px;
-    padding: 0;
-    display: inline-block;
-    position:relative;
-    justify-content: center;
-  }
-
 .container img{
     max-width: 100%;
     display:block;
@@ -111,17 +95,9 @@
     text-shadow: 1px 5px 10px black;
   }
 
-@media screen and (max-width: 991.98px){
-    .container{
-        width:calc(50% - 6px);
-        padding: 10px;
-    }
-}
-
-@media screen and (max-width: 767.98px){
-    .container{
-        width: calc(75% - 6px);
-        padding: 10px;
+@media (max-width: 767.98px){
+    .container img{
+        padding-bottom: 10px;
     }
 }
 
